added missing src files

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <meta name="format-detection" content="email=no">
     <link rel="canonical" href="https://aliviopay.com">
     <link rel="apple-touch-icon" sizes="180x180"
-        href="https://cdn.joinlucid.com/AlivioPay-Website/img/apple-touch-icon.png">
+        href="./img/alivio-app-favicon.png">
     <link rel="icon" type="image/png" sizes="32x32"
-        href="https://cdn.joinlucid.com/AlivioPay-Website/img/favicon-32x32.png">
+        href="./img/alivio-app-favicon.png">
     <link rel="icon" type="image/png" sizes="16x16"
-        href="https://cdn.joinlucid.com/AlivioPay-Website/img/favicon-16x16.png">
-    <link href="https://cdn.joinlucid.com/AlivioPay-Website/alivio_v2.min.css" rel="stylesheet" type="text/css" />
-    <script async="" src="https://cdn.joinlucid.com/AlivioPay-Website/lazyload.min.js"></script>
+        href="./img/alivio-app-favicon.png">
+    <link href="./css/alivio_v2.css" rel="stylesheet" type="text/css" />
+    <script async="" src="./js/lazyload.min.js"></script>
     <title>AlivioPay – Cobra facturas pendientes</title>
 </head>
 
@@ -27,7 +27,7 @@
     <div class="header">
         <div class="contentwrapper contentwrapper-header w-container">
             <div class="header-top"><img
-                    data-src="https://cdn.joinlucid.com/AlivioPay-Website/img/Logo-Geometry-Big.png" alt=""
+                    data-src="./img/Logo-Geometry-Big.png" alt=""
                     class="lazyload image-14">
                 <div id="replace-top" class="form form-top"> <input class="input" placeholder="Tu dirección de email"
                         id="email-input-top" /> <button class="button bordered"
@@ -37,9 +37,9 @@
             <div id="replace-top2" class="form form-top form-top-mobile"> <input class="input"
                     placeholder="Tu dirección de email" id="email-input-top2" /> <button class="button bordered"
                     onclick="submitEmail('email-input-top2');">Empieza a cobrar facturas</button></div> <img
-                data-src="https://cdn.joinlucid.com/AlivioPay-Website/img/header-illustration.svg" width="606" alt=""
+                data-src="./img/header-illustration.svg" width="606" alt=""
                 class="lazyload header-illustration">
-            <div class="div-block-2"> <img data-src="https://cdn.joinlucid.com/AlivioPay-Website/img/arrow-down.svg"
+            <div class="div-block-2"> <img data-src="./img/arrow-down.svg"
                     alt="" class="lazyload header-arrowdownicon"></div>
         </div>
     </div>
@@ -48,7 +48,7 @@
             <div class="intro-columns w-row">
                 <div class="intro-featureslist w-col w-col-6">
                     <div class="intro-feature"><img
-                            data-src="https://cdn.joinlucid.com/AlivioPay-Website/img/round-tick.svg" alt=""
+                            data-src="./img/round-tick.svg" alt=""
                             class="lazyload intro-featureicon">
                         <div class="intro-feature-description">
                             <div class="intro-feature-title">Seguimiento automatico de facturas impagadas</div>
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                     <div class="intro-feature"><img
-                            data-src="https://cdn.joinlucid.com/AlivioPay-Website/img/round-tick.svg" alt=""
+                            data-src="./img/round-tick.svg" alt=""
                             class="lazyload intro-featureicon">
                         <div class="intro-feature-description">
                             <div class="intro-feature-title">Gestion de pagos fraccionados</div>
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                     <div class="intro-feature"><img
-                            data-src="https://cdn.joinlucid.com/AlivioPay-Website/img/round-tick.svg" alt=""
+                            data-src="./img/round-tick.svg" alt=""
                             class="lazyload intro-featureicon">
                         <div class="intro-feature-description">
                             <div class="intro-feature-title">Pagos instantaneos</div>
@@ -85,7 +85,7 @@
                         </div>
                     </div>
                     <div class="intro-feature"><img
-                            data-src="https://cdn.joinlucid.com/AlivioPay-Website/img/round-tick.svg" alt=""
+                            data-src="./img/round-tick.svg" alt=""
                             class="lazyload intro-featureicon">
                         <div class="intro-feature-description">
                             <div class="intro-feature-title">Cuida la relacion con tus clientes</div>
@@ -111,7 +111,7 @@
                         <p class="intro-card-description">Lucid te ayuda a gestionar plazos de pago automatizados y
                             customizados para cada uno de tus clientes de manera que puedas emepzar a ingresar una parte
                             de tus facturas atrasadas.</p><img
-                            data-src="https://cdn.joinlucid.com/AlivioPay-Website/img/viruses.svg" alt=""
+                            data-src="./img/viruses.svg" alt=""
                             class="lazyload image">
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                     <div class="step-title">Importa tus facturas pendientes</div>
                 </div>
                 <div class="step-imageholder w-col w-col-6"><img
-                        data-src="https://cdn.joinlucid.com/AlivioPay-Website/img/Facturas.png" alt="" class="lazyload">
+                        data-src="./img/Facturas.png" alt="" class="lazyload">
                 </div>
             </div>
         </div>
@@ -136,7 +136,7 @@
         <div class="contentwrapper w-container">
             <div class="step-columns w-row">
                 <div class="step-imageholder w-col w-col-6"><img
-                        data-src="https://cdn.joinlucid.com/AlivioPay-Website/img/Email.png" alt="" class="lazyload">
+                        data-src="./img/Email.png" alt="" class="lazyload">
                 </div>
                 <div class="step-textholder w-col w-col-6">
                     <div class="step-number step-number-odd">02</div>
@@ -153,7 +153,7 @@
                     <div class="step-title">Tu cliente puede escojer como pagar</div>
                 </div>
                 <div class="step-imageholder w-col w-col-6"><img
-                        data-src="https://cdn.joinlucid.com/AlivioPay-Website/img/step-3.png" width="582" alt=""
+                        data-src="./img/step-3.png" width="582" alt=""
                         class="lazyload"></div>
             </div>
         </div>
@@ -162,7 +162,7 @@
         <div class="contentwrapper w-container">
             <div class="step-columns w-row">
                 <div class="step-imageholder w-col w-col-6"><img
-                        data-src="https://cdn.joinlucid.com/AlivioPay-Website/img/Cobro-automatico.png" alt=""
+                        data-src="./img/Cobro-automatico.png" alt=""
                         class="lazyload"></div>
                 <div class="step-textholder w-col w-col-6">
                     <div class="step-number step-number-odd">04</div>
@@ -177,13 +177,13 @@
                 <div class="pageblock-title">100% seguro</div>
                 <div class="w-row">
                     <div class="column-4 w-col w-col-4"><img
-                            data-src="https://cdn.joinlucid.com/AlivioPay-Website/img/security-1.png" alt=""
+                            data-src="./img/security-1.png" alt=""
                             class="lazyload image-12"></div>
                     <div class="column-2 w-col w-col-4"><img
-                            data-src="https://cdn.joinlucid.com/AlivioPay-Website/img/security-3.png" alt=""
+                            data-src="./img/security-3.png" alt=""
                             class="lazyload image-11"></div>
                     <div class="column-3 w-col w-col-4"><img
-                            data-src="https://cdn.joinlucid.com/AlivioPay-Website/img/security-2.png" alt=""
+                            data-src="./img/security-2.png" alt=""
                             class="lazyload image-13"></div>
                 </div>
             </div>
@@ -194,17 +194,17 @@
             <div class="pageblock">
                 <div class="pageblock-title pageblock-title-light">El equipo</div>
                 <div class="teamholder">
-                    <div class="teamperson"><img data-src="https://cdn.joinlucid.com/AlivioPay-Website/img/Cesar.png"
+                    <div class="teamperson"><img data-src="./img/Cesar.png"
                             alt="" class="lazyload image-7">
                         <div class="teamperson-name">César</div>
                         <div class="teamperson-position">Co-Founder &amp; CEO</div>
                     </div>
-                    <div class="teamperson"><img data-src="https://cdn.joinlucid.com/AlivioPay-Website/img/Alex.png"
+                    <div class="teamperson"><img data-src="./img/Alex.png"
                             alt="" class="lazyload">
                         <div class="teamperson-name">Alex</div>
                         <div class="teamperson-position">Software engineer</div>
                     </div>
-                    <div class="teamperson"><img data-src="https://cdn.joinlucid.com/AlivioPay-Website/img/Gabriel.png"
+                    <div class="teamperson"><img data-src="./img/Gabriel.png"
                             alt="" class="lazyload">
                         <div class="teamperson-name">Gabriel</div>
                         <div class="teamperson-position">Co-Founder</div>
@@ -212,12 +212,12 @@
                 </div>
                 <div class="contactdetailsholder">
                     <div class="contactdetails-item"> <img
-                            src="https://uploads-ssl.webflow.com/5e96e42381e780f9aa0c7b7d/5f035bb566db701d06442527_tel.svg"
+                            src="./img/tel.svg"
                             alt="" class="lazyload contactdetails-icon">
                         <div class="contactdetails-text">+34 937 370 182</div>
                     </div>
                     <div class="contactdetails-item"> <img
-                            src="https://uploads-ssl.webflow.com/5e96e42381e780f9aa0c7b7d/5f035bb588ea873b233918f1_mail.png"
+                            src="./img/mail.png"
                             alt="" class="lazyload contactdetails-icon">
                         <div class="contactdetails-text">hello@aliviopay.com</div>
                     </div>
@@ -241,22 +241,22 @@
         <div class="contentwrapper w-container">
             <div class="div-block-3 w-clearfix">
                 <div class="poweredbytitle">Powered by</div> <a href="https://joinlucid.com"> <img
-                        data-src="https://cdn.joinlucid.com/AlivioPay-Website/img/Lucid-Logo.svg" alt=""
+                        data-src="./img/Lucid-Logo.svg" alt=""
                         class="lazyload image-15"> </a>
             </div>
         </div>
     </div>
-    <script>!function (f, b, e, v, n, t, s) { if (f.fbq) return; n = f.fbq = function () { n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments) }; if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0'; n.queue = []; t = b.createElement(e); t.async = !0; t.src = v; s = b.getElementsByTagName(e)[0]; s.parentNode.insertBefore(t, s) }(window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js'); fbq('init', '238016824152805'); fbq('track', 'PageView');</script>
+    <!-- <script>!function (f, b, e, v, n, t, s) { if (f.fbq) return; n = f.fbq = function () { n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments) }; if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0'; n.queue = []; t = b.createElement(e); t.async = !0; t.src = v; s = b.getElementsByTagName(e)[0]; s.parentNode.insertBefore(t, s) }(window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js'); fbq('init', '238016824152805'); fbq('track', 'PageView');</script>
     <noscript> <img height="1" width="1" style="display:none"
             src="https://www.facebook.com/tr?id=238016824152805&ev=PageView&noscript=1" /> </noscript>
     <script
         type="text/javascript">(function (m, e, t, r, i, k, a) { m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) }; m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a) })(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym"); ym(62406526, "init", { clickmap: true, trackLinks: true, accurateTrackBounce: true, webvisor: true });</script>
     <noscript>
         <div><img src="https://mc.yandex.ru/watch/62406526" style="position:absolute; left:-9999px;" alt="" /></div>
-    </noscript>
-    <script async src="https://cdn.joinlucid.com/AlivioPay-Website/alivio_v2.min.js"></script>
-    <script
-        async>(function () { var w = window; var ic = w.Intercom; if (typeof ic === "function") { ic('reattach_activator'); ic('update', intercomSettings); } else { var d = document; var i = function () { i.c(arguments) }; i.q = []; i.c = function (args) { i.q.push(args) }; w.Intercom = i; function l() { var s = d.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'https://widget.intercom.io/widget/gronum2v'; var x = d.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x); } if (w.attachEvent) { w.attachEvent('onload', l); } else { w.addEventListener('load', l, false); } } })(); window.Intercom("boot", { app_id: "gronum2v", language_override: 'es' });</script>
+    </noscript> -->
+    <script async src="./js/alivio_v2.js"></script>
+    <!-- <script
+        async>(function () { var w = window; var ic = w.Intercom; if (typeof ic === "function") { ic('reattach_activator'); ic('update', intercomSettings); } else { var d = document; var i = function () { i.c(arguments) }; i.q = []; i.c = function (args) { i.q.push(args) }; w.Intercom = i; function l() { var s = d.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'https://widget.intercom.io/widget/gronum2v'; var x = d.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x); } if (w.attachEvent) { w.attachEvent('onload', l); } else { w.addEventListener('load', l, false); } } })(); window.Intercom("boot", { app_id: "gronum2v", language_override: 'es' });</script> -->
 </body>
 
 </html>
